--- a/views/addsoal.ejs
+++ b/views/addsoal.ejs
@@ -24,8 +24,11 @@
             }
             .button1 {
                 background-color: #013880; 
+            }
+            div.card {
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: left;
             }            
-        </style>            
         </style>
     </head>
 
@@ -43,16 +46,15 @@
           </div>
     </nav>
 
-
     <body style="background-color: F1F4F5;">
         <div class="container">
             <div class="container pt-3 text-xs font-bold">
-                <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a> / Soal ke-  <%= bank_soal.id_banksoal %> </p>
+                <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a> / Buat Soal</p>
             </div>
-            <form method="post", action="/soal/ubah/<%= bank_soal.id_banksoal %>">
+            <form method="post", action="/soal/simpan">
                 <div class="row px-16">
                     <div class="col-sm-9">
-                        <h3>Edit Soal</h3>
+                        <h3>Buat Soal Baru</h3>
                     </div>
                     <div class="col-sm-3">
                         <button class="btn button1 float-right" style="width: 150px; color: whitesmoke;" type="submit">
@@ -60,18 +62,14 @@
                         </button>
                     </div>
                 </div>
-                <div class="row mt-3 py-3" style="background-color: white; border-width: 2px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <div class="card row mt-3 py-3" style="background-color: white; border-width: 2px">
                     <div class="col-sm-12">
                         <div class="row px-4">
                             <div class="col-sm-5 form-group">
                                 <label for="id_topik" class="font-bold">Bab Materi Soal :</label>
                                 <select class="form-control" name="id_topik" id="id_topik">
                                     <% topik.forEach(function(b){ %>
-                                        <% if (b.id_topik == bank_soal.id_topik) { %>
-                                            <option selected value="<%= b.id_topik %>"><%= b.nama_topik %></option>
-                                        <% } else { %>
-                                            <option value="<%= b.id_topik %>"><%= b.nama_topik %></option>
-                                        <% } %>
+                                        <option value="<%= b.id_topik %>"><%= b.nama_topik %></option>
                                     <% }); %>
                                 </select>
                             </div>
@@ -79,78 +77,50 @@
                             <div class="col-sm-5 form-group">
                                 <label for="tingkat_kesulitan" class="font-bold">Tingkat Kesulitan :</label>
                                 <select class="form-control" name="tingkat_kesulitan" id="tingkat_kesulitan">
-                                    <% if (bank_soal.tingkat_kesulitan == 1) { %>
-                                        <option selected value="1">Mudah</option>
-                                    <% } else { %>
-                                        <option value="1">Mudah</option>
-                                    <% } %>
-                                    <% if (bank_soal.tingkat_kesulitan == 2) { %>
-                                        <option selected value="2">Sedang</option>
-                                    <% } else { %>
-                                        <option value="2">Sedang</option>
-                                    <% } %>
-                                    <% if (bank_soal.tingkat_kesulitan == 3) { %>
-                                        <option selected value="3">Sulit</option>
-                                    <% } else { %>
-                                        <option value="3">Sulit</option>
-                                    <% } %>
+                                    <option value="1">Mudah</option>
+                                    <option value="2">Sedang</option>
+                                    <option value="3">Sulit</option>
                                 </select>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-12 form-group">
                                 <label for="pertanyaan" class="font-bold">Pertanyaan :</label>
-                                <textarea class="form-control" name="pertanyaan" id="pertanyaan" rows="3"><%= bank_soal.pertanyaan %></textarea>
+                                <textarea class="form-control" name="pertanyaan" id="pertanyaan" rows="3"></textarea>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-9 form-group">
                                 <label for="pilihan_a" class="font-bold">Pilihan A :</label>
-                                <textarea class="form-control" name="pilihan_a" id="pilihan_a" rows="1"><%= bank_soal.pilihan_a %></textarea>
+                                <textarea class="form-control" name="pilihan_a" id="pilihan_a" rows="1"></textarea>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-9 form-group">
                                 <label for="pilihan_b" class="font-bold">Pilihan B :</label>
-                                <textarea class="form-control" name="pilihan_b" id="pilihan_b" rows="1"><%= bank_soal.pilihan_b %></textarea>
+                                <textarea class="form-control" name="pilihan_b" id="pilihan_b" rows="1"></textarea>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-9 form-group">
                                 <label for="pilihan_c" class="font-bold">Pilihan C :</label>
-                                <textarea class="form-control" name="pilihan_c" id="pilihan_c" rows="1"><%= bank_soal.pilihan_c %></textarea>
+                                <textarea class="form-control" name="pilihan_c" id="pilihan_c" rows="1"></textarea>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-9 form-group">
                                 <label for="pilihan_d" class="font-bold">Pilihan D :</label>
-                                <textarea class="form-control" name="pilihan_d" id="pilihan_d" rows="1"><%= bank_soal.pilihan_d %></textarea>
+                                <textarea class="form-control" name="pilihan_d" id="pilihan_d" rows="1"></textarea>
                             </div>
                         </div>
                         <div class="row px-4">
                             <div class="col-sm-5 form-group">
                                 <label for="pilihan_benar" class="font-bold">Pilihan Benar :</label>
                                 <select class="form-control" name="pilihan_benar" id="pilihan_benar">
-                                    <% if (bank_soal.pilihan_benar == 1) { %>
-                                        <option selected value="1">Pilihan A</option>
-                                    <% } else { %>
-                                        <option value="1">Pilihan A</option>
-                                    <% } %>
-                                    <% if (bank_soal.pilihan_benar == 2) { %>
-                                        <option selected value="2">Pilihan B</option>
-                                    <% } else { %>
-                                        <option value="2">Pilihan B</option>
-                                    <% } %>
-                                    <% if (bank_soal.pilihan_benar == 3) { %>
-                                        <option selected value="3">Pilihan C</option>
-                                    <% } else { %>
-                                        <option value="3">Pilihan C</option>
-                                    <% } %>
-                                    <% if (bank_soal.pilihan_benar == 4) { %>
-                                        <option selected value="4">Pilihan D</option>
-                                    <% } else { %>
-                                        <option value="4">Pilihan D</option>
-                                    <% } %>
+                                    <option value="1">Pilihan A</option>
+                                    <option value="2">Pilihan B</option>
+                                    <option value="3">Pilihan C</option>
+                                    <option value="4">Pilihan D</option>
                                 </select>
                             </div>
                         </div>
