--- a/views/soal.ejs
+++ b/views/soal.ejs
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
     
-        <title>Draft Soal</title>
+        <title>Bank Soal</title>
         
         <style>
             /* Modify the background color */
@@ -92,7 +92,7 @@
             <!-- <li class="nav-item active"> -->
               <!-- <a class="nav-link" href="#">Nama Dosen Pengampu</a> -->
               <!-- <a class="nav-link" style="color: whitesmoke"; href="#">Nama Dosen Pengampu</a> -->
-              <!-- <p style="color: #2c88d9;"><a href="/soal">Draft Soal</a></p> -->
+              <!-- <p style="color: #2c88d9;"><a href="/soal">Bank Soal</a></p> -->
             <!-- </li> -->
             <!-- <li class="nav-item">
               <iconify-icon icon="gridicons:user-circle" style="color: #c3cfd9;" width="35" height="35"></iconify-icon>
@@ -126,27 +126,27 @@
     <body style="background-color: F1F4F5;"></body>
         <div class="container-fluid">
             <div class="container pt-3 text-xs font-bold">
-                <p style="color: #013880;"><a href="/soal" style="color: #013880;">Draft Soal</a></p>
+                <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a></p>
             </div>
             <div class="container mt-3">
                 <ul class="nav nav-tabs">
                   <li class="nav-item">
-                    <a class="nav-link active" href="/soal">Draft Soal</a>
+                    <a class="nav-link active" href="/soal">Bank Soal</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/paketsoal">Ujian</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/soal">Bab Materi</a>
+                  <!-- <li class="nav-item">
+                    <a class="nav-link" href="/soal">Bab topik</a>
                   </li>
-                </ul>
+                </ul> -->
             </div>
             <div class="row px-16">
                 <div class="col-lg-4" style="margin-top: 20px;">
-                    <h4>Bab Materi</h4>           
+                    <h4>Bab topik</h4>           
                 </div>
                 <div class="col-lg-8" style="margin-top: 20px;">
-                    <h4>Draft Soal</h4>           
+                    <h4>Bank Soal</h4>           
                 </div>
                 <div class="col-lg-4">
                     <!-- <div class="pb-4">
@@ -158,7 +158,7 @@
                     <div class="card" style="background-color: whitesmoke; border-width: 2px; height: 280px;">
                         <form method="post" action="/topik">
                             <div class="input-group">
-                                <input type="text" class="form-control" name="nama_topik" placeholder="Bab Materi Baru ...">
+                                <input type="text" class="form-control" name="nama_topik" placeholder="Bab topik Baru ...">
                                 <div class="input-group-append">
                                     <button class="btn button1 btn-lg active" type="submit">
                                         <iconify-icon icon="gg:add" style="color: white;" width="24" height="24"></iconify-icon>
