--- a/views/detailpaketsoal.ejs
+++ b/views/detailpaketsoal.ejs
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
     
-        <title>Draft Soal</title>
+        <title>Bank Soal</title>
         <style>
             /* Modify the background color */
          
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row pt-3 text-xs font-bold">
                 <div class="col-lg-12">
-                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Draft Soal</a> / <a href="/paketsoal" style="color: #013880;">Ujian</a> / <a style="color: #013880;">Paket Soal </a> <%= paketsoal.nama %></p>
+                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a> / <a href="/paketsoal" style="color: #013880;">Ujian</a> / <a style="color: #013880;">Paket Soal </a> <%= paketsoal.nama %></p>
                 </div>
             </div>
             <div class="row mb-3">
