--- a/views/editkonfigurasi.ejs
+++ b/views/editkonfigurasi.ejs
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
     
-        <title>Draft Soal</title>
+        <title>Bank Soal</title>
         <style>
             /* Modify the background color */
          
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row pt-3 text-xs font-bold">
                 <div class="col-lg-12">
-                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Draft Soal</a> / <a href="/paketsoal" style="color: #013880;">Ujian</a> / <a href="/konfigurasi" style="color: #013880;">Detail Ujian</a> / <%= paketsoal.nama %></p>
+                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a> / <a href="/paketsoal" style="color: #013880;">Ujian</a> / <a href="/konfigurasi" style="color: #013880;">Detail Ujian</a> / <%= paketsoal.nama %></p>
                 </div>
             </div>
             <div class="row mb-3">
@@ -82,7 +82,7 @@
             </div>
             <div class="row mb-10">
                 <div class="col-lg-12 pt-3" style="background-color: white; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-                    <form method="post", action="/datapaketsoal/<%= paketsoal.id_paketsoal %>">
+                    <form method="post", action="/acakpaketsoal/<%= paketsoal.id_paketsoal %>">
                         <div class="row px-4">
                             <div class="col-lg-7 form-group">
                                 <label for="judul" class="font-bold">Nama Ujian :</label>
@@ -104,7 +104,7 @@
             <form method="post", action="/topikujian/simpan">
                 <div class="row">
                     <div class="col-lg-3 form-group">
-                        <label for="id_topik" class="font-bold">Bab Materi Ujian :</label>
+                        <label for="id_topik" class="font-bold">Topik Ujian :</label>
                         <select class="form-control" name="id_topik" id="id_topik">
                             <% topik.forEach(function(b){ %>
                                 <option value="<%= b.id_topik %>"><%= b.nama_topik %></option>
@@ -112,19 +112,19 @@
                         </select>
                     </div>
                     <div class="col-lg-2 form-group">
-                        <label for="persentase_topik" class="font-bold">Persentase Bab Materi :</label>
+                        <label for="persentase_topik" class="font-bold">Persentase Topik</label>
                         <input type="number" class="form-control" name="persentase_topik" id="persentase_topik" min="0" max="1" step="0.1" placeholder="0.0 - 1.0">
                     </div>
                     <div class="col-lg-2 form-group">
-                        <label for="persentase_mudah" class="font-bold">Proporsi Soal Mudah (%) :</label>
+                        <label for="persentase_mudah" class="font-bold">% Soal Mudah</label>
                         <input type="number" class="form-control" name="persentase_mudah" id="persentase_mudah" min="0" max="1" step="0.1" placeholder="0.0 - 1.0">
                     </div>
                     <div class="col-lg-2 form-group">
-                        <label for="persentase_sedang" class="font-bold">Proporsi Soal Sedang (%) :</label>
+                        <label for="persentase_sedang" class="font-bold">% Soal Medium</label>
                         <input type="number" class="form-control" name="persentase_sedang" id="persentase_sedang" min="0" max="1" step="0.1" placeholder="0.0 - 1.0">
                     </div>
                     <div class="col-lg-2 form-group">
-                        <label for="persentase_sulit" class="font-bold">Proporsi Soal Sulit (%)  :</label>
+                        <label for="persentase_sulit" class="font-bold">% Soal Sulit</label>
                         <input type="number" class="form-control" name="persentase_sulit" id="persentase_sulit" min="0" max="1" step="0.1" placeholder="0.0 - 1.0">
                     </div>
                     <div class="col-lg-1 pt-8">
