--- a/views/paketsoal.ejs
+++ b/views/paketsoal.ejs
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <script src="https://code.iconify.design/iconify-icon/1.0.3/iconify-icon.min.js"></script>
     
-        <title>Draft Soal</title>
+        <title>Bank Soal</title>
         <style>
             /* Modify the background color */
          
@@ -68,20 +68,20 @@
         <div class="container">
             <div class="row pt-3 text-xs font-bold">
                 <div class="col-lg-12">
-                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Draft Soal</a> / <a href="/paketsoal" style="color:#013880;">Ujian</a></p>
+                    <p style="color: #013880;"><a href="/soal" style="color: #013880;">Bank Soal</a> / <a href="/paketsoal" style="color:#013880;">Ujian</a></p>
                 </div>
             </div>
             <div class="container mt-3">
                 <ul class="nav nav-tabs">
                   <li class="nav-item">
-                    <a class="nav-link" href="/soal">Draft Soal</a>
+                    <a class="nav-link" href="/soal">Bank Soal</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" href="/paketsoal">Ujian</a>
                   </li>
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a class="nav-link" href="/soal">Bab Materi</a>
-                  </li>
+                  </li> -->
                 </ul>
             </div>
             <div class="row mb-3 mt-5">
